implements JpaCourseRepository