@@ -2,9 +2,9 @@ package ru.university;
 
 import ru.university.model.*;
 
-import java.util.Arrays;
 import java.util.Date;
 import java.util.EnumSet;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static ru.university.model.Role.ROLE_PROFESSOR;
@@ -28,7 +28,7 @@ public class UserTestData {
     }
 
     public static void assertMatch(Iterable<User> actual, User... expected) {
-        assertMatch(actual, Arrays.asList(expected));
+        assertMatch(actual, List.of(expected));
     }
 
     public static void assertMatch(Iterable<User> actual, Iterable<User> expected) {
